--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ Desktop.ini
 # Maven Wrapper
 ######################
 !.mvn/wrapper/maven-wrapper.jar
-
+/target/
 ######################
 # ESLint
 ######################
